# atmacup_18

./: .gitignore  pyproject.toml
data/input/: sample_submission.csv
exp/000/: README.md  run.ipynb
exp/000/config/: config.yaml
exp/001/: README.md  run.ipynb
exp/001/config/model/: lgb.yaml
exp/002/: README.md  final_predictions.npy  run.ipynb
exp/002/config/: config.yaml
exp/002/config/model/: cnn.yaml
exp/003/: README.md  run.ipynb
exp/003/config/: config.yaml
exp/004/: README.md  final_predictions.npy  run.ipynb
exp/004/config/model/: cnn.yaml
exp/005/: README.md  run.ipynb
exp/005/config/model/: cnn.yaml
exp/006/: README.md  run.ipynb  run_nn_009.ipynb  run_nn_011.ipynb
exp/006/config/: config.yaml
exp/007/: README.md  create_depth_map.ipynb  run.ipynb
exp/008/: README.md  vlm.ipynb  vlm_qwen.ipynb
exp/008/config/: config.yaml
exp/008/config/model/: cnn.yaml
exp/009/: README.md  run.ipynb
exp/009/config/: config.yaml
exp/009/config/model/: cnn.yaml
exp/010/: ensamble.ipynb
exp/011/: README.md  run.ipynb
exp/011/config/model/: cnn.yaml
exp/012/: README.md  run.ipynb
exp/012/config/model/: cnn.yaml
exp/013/: README.md  create_optical_flow.ipynb
exp/014/: README.md  run.ipynb
exp/014/config/: config.yaml
exp/014/config/model/: cnn.yaml
